   -- Reorganized terrain data structures to make future extension of number
      of resources, lairs, races easier.
   -- Changed lair percent to be percent of terrain type which has lair
      rather than percent chance for each type of lair.
   -- Reorganized as many of the rest of the datastructures as I could get
      my hands on to do similar stuff to what I did to the terrain data
      structs.
   -- Added some fields in the item structures to handle crafting items by
      magic.  Down with special cases.  Some work still needs to be done
      here.
   -- Made road decay into more generic building decay and extended the
      building definition structure to handle it.
   -- Fixed a long standing bug.  The rules state that a guarding unit will
      prevent ALL units of any faction other than the owner from pillaging.
      The code up until now had been implementing it as any unit of a
      nuetral or worse stance faction.  This has been fixed.
   -- Added item and object descriptions.  Redid skill descriptions.
   -- Made horse/wagon generic rather than hardcoded. 
   -- Removed the special case of earthquakes not affecting MFORTRESS.  This
      is now handled by a NOEARTHQUAKE flags on the object in the ObjectDefs
      structure.
   -- Added skillflag SLOWSTUDY.  If you modify a skill to have this flag,
      a month of study will only produce 15 days of learning in the skill.
      This is cumulative with non-tower penalty for magic skills over level 2.
   -- Fixed a bug which could potentially result in GUARD_ADVANCE being left
      set on a unit across turns.
   -- Fixed a bug in calculating planar distances around the east/west
      boundary.
   -- Added some 'commands' allowable in the Players.in file which allow the
      GM to give a faction custom-made units, or to give existing units of
      that faction various skills or items (or to take them away).  It also
      allows the GM to force some orders to be executed by specific units.