@@ -205,7 +205,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"silver","silver","SILV",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0}, {-1,0}},
 	 -1,0,0, {{-1,0},{-1,0}},
 	 0, IT_NORMAL, 1,0,0,
@@ -837,7 +837,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"amulet of invulnerability","amulets of invulnerability","XXXX",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 -1,0,0, {{-1,0},{-1,0}},
 	 0,IT_MAGIC | IT_BATTLE | IT_SPECIAL, 1000000,1,BATTLE_AOFI,
@@ -845,7 +845,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"ring of invisibility","rings of invisibility","RING",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CREATE_RING_OF_INVISIBILITY,1,20, {{I_SILVER,600},{-1,0}},
 	 0,IT_MAGIC, 4000,1,0,
@@ -853,7 +853,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"cloak of invulnerability","cloaks of invulnerability","CLOA",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CREATE_CLOAK_OF_INVULNERABILITY,1,20, {{I_SILVER,800},{-1,0}},
 	 0, IT_MAGIC | IT_ARMOR, 8000, 1, ARMOR_CLOAKOFI,
@@ -861,7 +861,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"staff of fire","staves of fire","STAF",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CREATE_STAFF_OF_FIRE,1,20, {{I_SILVER,600},{-1,0}},
 	 0,IT_MAGIC | IT_BATTLE, 4000,1,BATTLE_STAFFOFF,
@@ -869,7 +869,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"staff of lightning","staves of lightning","STAL",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CREATE_STAFF_OF_LIGHTNING,1,20, {{I_SILVER,1000},{-1,0}},
 	 0,IT_MAGIC | IT_BATTLE, 16000,1,BATTLE_STAFFOFL,
@@ -877,7 +877,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"amulet of true seeing","amulets of true seeing","AMTS",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CREATE_AMULET_OF_TRUE_SEEING,1,20, {{I_SILVER,600},{-1,0}},
 	 0,IT_MAGIC, 4000,0,0,
@@ -885,7 +885,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"amulet of protection","amulets of protection","AMPR",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CREATE_AMULET_OF_PROTECTION,1,100, {{I_SILVER,200},{-1,0}},
 	 0,IT_MAGIC | IT_BATTLE, 1000,1,BATTLE_AMULETOFP,
@@ -893,7 +893,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"runesword","runeswords","RUNE",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CREATE_RUNESWORD,1,20, {{I_SILVER,800},{-1,0}},
 	 1, IT_MAGIC | IT_WEAPON | IT_BATTLE, 8000,1, WEAPON_RUNESWORD,
@@ -901,7 +901,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"shieldstone","shieldstones","SHST",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CREATE_SHIELDSTONE,1,100, {{I_SILVER,200},{-1,0}},
 	 0, IT_MAGIC | IT_BATTLE, 4000,1,BATTLE_SHIELDSTONE,
@@ -909,7 +909,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"magic carpet","magic carpets","CARP",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CREATE_MAGIC_CARPET,1,100, {{I_SILVER,400},{-1,0}},
 	 0, IT_MAGIC, 2000,0,0,
@@ -989,7 +989,7 @@ ItemType id[] =
 	 -1,0,
 	 -1,0},
 	{"portal","portals","PORT",
-	 0,
+	 ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 S_CONSTRUCT_PORTAL,1,20, {{I_SILVER,600},{-1,0}},
 	 1, IT_MAGIC | IT_SPECIAL, 1000,0,0,
@@ -1027,7 +1027,7 @@ ItemType id[] =
 	 1, IT_NORMAL | IT_WEAPON|IT_TOOL,60,1,WEAPON_AXE,
 	 0,0,0,0,
 	 -1,0,
-	 I_HAMMER,1},
+	 I_AXE,1},
 	{"hammer","hammers","HAMM",
 	 ItemType::DISABLED,
 	 S_WEAPONSMITH,1,1,1, {{I_IRON,1},{-1,0}},
@@ -1109,7 +1109,7 @@ ItemType id[] =
 	 -1,0,
 	 I_SPINNING,2},
 	{"boots of levitation","boots of levitation","BOOT", 
-	 ItemType::DISABLED,
+	 ItemType::DISABLED | ItemType::NOMARKET,
 	 -1,0,0,0, {{-1,0},{-1,0}},
 	 -1,0,0, {{-1,0},{-1,0}},
 	 0, IT_MAGIC, 1000, 0, 0,
@@ -1273,7 +1273,7 @@ ItemType id[] =
 	 ItemType::DISABLED,
 	 S_WEAPONCRAFT,1,2,1, {{I_WOOD,2},{-1,0}},
 	 -1,0,0, {{-1,0},{-1,0}},
-	 2,IT_NORMAL | IT_WEAPON, 100,1,WEAPON_LANCE,
+	 2,IT_ADVANCED | IT_WEAPON, 100,1,WEAPON_LANCE,
 	 0,0,0,0,
 	 -1,0,
 	 I_AXE,1},
@@ -1326,7 +1326,7 @@ ItemType id[] =
 	 -1,0,
 	 I_HAMMER,1},
 	{"admantium","admantium","ADMT",
-	 ItemType::DISABLED,
+	 ItemType::DISABLED | ItemType::NOMARKET,
 	 S_MINING,5,1,1, {{-1,0},{-1,0}},
 	 -1,0,0, {{-1,0},{-1,0}},
 	 10, IT_ADVANCED, 100,0,0,
@@ -1334,50 +1334,50 @@ ItemType id[] =
 	 -1,0,
 	 I_PICK,1},
 	{"admantium sword", "admantium swords", "ASWR", 
-	 ItemType::DISABLED,
+	 ItemType::DISABLED | ItemType::NOMARKET,
 	 S_WEAPONCRAFT,3,2,1, {{I_ADMANTIUM,1},{-1,0}},
 	 -1,0,0, {{-1,0},{-1,0}},
-	 1, IT_MAGIC|IT_WEAPON,2000,1,WEAPON_ADSWORD,
+	 1, IT_ADVANCED|IT_WEAPON,2000,1,WEAPON_ADSWORD,
 	 0,0,0,0,
 	 -1,0,
 	 I_HAMMER,1},
 	{"admantium battle axe","admantium battle axes","ABAX", 
-	 ItemType::DISABLED,
+	 ItemType::DISABLED | ItemType::NOMARKET,
 	 S_WEAPONCRAFT,5,2,1, {{I_ADMANTIUM,1},{I_YEW,1}},
 	 -1,0,0, {{-1,0},{-1,0}},
-	 2, IT_MAGIC|IT_WEAPON, 3000, 1, WEAPON_ADBAXE,
+	 2, IT_ADVANCED|IT_WEAPON, 3000, 1, WEAPON_ADBAXE,
 	 0,0,0,0,
 	 -1,0,
 	 I_HAMMER,1},
 	{"improved mithril armor","improved mithril armors","IMTH",
-	 ItemType::DISABLED,
+	 ItemType::DISABLED | ItemType::NOMARKET,
 	 S_ARMORCRAFT,1,1,1, {{I_MPLATE,1},{I_MITHRIL,1}},
 	 -1,0,0, {{-1,0},{-1,0}},
-	 1, IT_MAGIC | IT_ARMOR, 1000,1,ARMOR_IMITHRIL,
+	 1, IT_ADVANCED | IT_ARMOR, 1000,1,ARMOR_IMITHRIL,
 	 0,0,0,0,
 	 -1,0,
 	 I_HAMMER,1},
 	{"admantium ring mail", "admantium ring mails", "ARNG", 
-	 ItemType::DISABLED,
+	 ItemType::DISABLED | ItemType::NOMARKET,
 	 S_ARMORCRAFT,3,2,1, {{I_ADMANTIUM,1},{-1,0}},
 	 -1,0,0, {{-1,0},{-1,0}},
-	 1,IT_MAGIC | IT_ARMOR, 3000,1,ARMOR_ADRING,
+	 1,IT_ADVANCED | IT_ARMOR, 3000,1,ARMOR_ADRING,
 	 0,0,0,0,
 	 -1,0,
 	 I_HAMMER,1},
 	{"admantium plate mail","admantium plate mails","AARM",
-	 ItemType::DISABLED,
+	 ItemType::DISABLED | ItemType::NOMARKET,
 	 S_ARMORCRAFT,5,4,1, {{I_ADMANTIUM,3},{-1,0}},
 	 -1,0,0, {{-1,0},{-1,0}},
-	 1,IT_MAGIC | IT_ARMOR, 6000,1,ARMOR_ADPLATE,
+	 1,IT_ADVANCED | IT_ARMOR, 6000,1,ARMOR_ADPLATE,
 	 0,0,0,0,
 	 -1,0,
 	 I_HAMMER,1},
 	{"super bow","super bows","SBOW",
-	 ItemType::DISABLED,
+	 ItemType::DISABLED | ItemType::NOMARKET,
 	 S_WEAPONCRAFT,4,2,1, {{I_YEW,2},{I_MITHRIL,1}},
 	 -1,0,0, {{-1,0},{-1,0}},
-	 1, IT_MAGIC|IT_WEAPON, 4000, 1, WEAPON_SUPERBOW,
+	 1, IT_ADVANCED|IT_WEAPON, 4000, 1, WEAPON_SUPERBOW,
 	 0, 0, 0, 0,
 	 -1,0,
 	 I_AXE, 1},
@@ -1513,7 +1513,7 @@ ItemType id[] =
 	 ItemType::DISABLED,
 	 S_WEAPONCRAFT,1,2,1, {{I_WOOD,1},{I_IRON,1}},
 	 -1,0,0, {{-1,0},{-1,0}},
-	 2,IT_NORMAL | IT_WEAPON, 100,1,WEAPON_PIKE,
+	 2,IT_ADVANCED | IT_WEAPON, 100,1,WEAPON_PIKE,
 	 0,0,0,0,
 	 -1,0,
 	 I_AXE,1},
